# markdown-discord-bot

./: .gitignore  Dockerfile  README.md  docker-compose-example.yml  pyproject.toml
markdown_discord_bot/: __init__.py  __main__.py  config.py
