[tool.poetry]
name = "markdown-discord-bot"
version = "0.1.0"
description = ""
authors = ["Artur Khakimov <verybigfolder@yandex.ru>"]

[tool.poetry.dependencies]
python = "^3.9"
"discord.py" = "^1.6.0"
asyncio = "^3.4.3"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
